# GBEmulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  GBEmulator.props  GBEmulator.slnx  SDL.props  callgrind.out.37226
GBEmulator/: CMakeLists.txt  GBEmulator.vcxproj  main.cpp
GBEmulatorCore/: CMakeLists.txt  GBEmulatorCore.vcxproj  GBEmulatorCore.vcxproj.filters
GBEmulatorCore/include/: CPU.h  CPUMicroOp.h  Cartridge.h  Common.h  Context.h  DMA.h  Emulator.h  EmulatorMem.h  Interrupts.h  Joypad.h  Mem.h  PPU.h  Registers.h  Timer.h  UI.h
GBEmulatorCore/lib/: CPU.cpp  CPUMicroOp.cpp  Cartridge.cpp  Common.cpp  Context.cpp  DMA.cpp  Emulator.cpp  EmulatorMem.cpp  Interrupts.cpp  Joypad.cpp  Mem.cpp  PPU.cpp  Registers.cpp  Timer.cpp  UI.cpp
GBEmulatorTests/: CMakeLists.txt  GBEmulatorTests.vcxproj  GBEmulatorTests.vcxproj.filters  OperationsTests.cpp
GBEmulatorTests/include/: CPUTestsFixture.h
GBEmulatorTests/lib/: OperationsTests.cpp  OperationsTests_adc_a_imm8.cpp  OperationsTests_adc_a_r8.cpp  OperationsTests_add_a_imm8.cpp  OperationsTests_add_a_r8.cpp  OperationsTests_add_hl_r16.cpp  OperationsTests_add_sp_imm8.cpp  OperationsTests_and_a_imm8.cpp  OperationsTests_and_a_r8.cpp  OperationsTests_bit_b3_r8.cpp  OperationsTests_call_cond_imm16.cpp  OperationsTests_call_imm16.cpp  OperationsTests_ccf.cpp  OperationsTests_cp_a_imm8.cpp  OperationsTests_cp_a_r8.cpp  OperationsTests_cpl.cpp  OperationsTests_daa.cpp  OperationsTests_dec_r16.cpp  OperationsTests_dec_r8.cpp  OperationsTests_di.cpp  OperationsTests_ei.cpp  OperationsTests_halt.cpp  OperationsTests_inc_r16.cpp  OperationsTests_inc_r8.cpp  OperationsTests_jp_cond_imm16.cpp  OperationsTests_jp_hl.cpp  OperationsTests_jp_imm16.cpp  OperationsTests_jr_cond_imm8 .cpp  OperationsTests_jr_imm8.cpp  OperationsTests_ld_a_imm16.cpp  OperationsTests_ld_a_r16mem.cpp  OperationsTests_ld_hl_sp_imm8.cpp  OperationsTests_ld_imm16_a.cpp  OperationsTests_ld_imm16_sp.cpp  OperationsTests_ld_r16_imm16.cpp  OperationsTests_ld_r16mem_a.cpp  OperationsTests_ld_r8_imm8.cpp  OperationsTests_ld_r8_r8.cpp  OperationsTests_ld_sp_hl.cpp  OperationsTests_ldh_a_c.cpp  (+36 more)
GBEmulatorTests/lib/CPU/: CPUTests.cpp  CPUTests_adc_a_imm8.cpp  CPUTests_adc_a_r8.cpp  CPUTests_adc_hl.cpp  CPUTests_adc_n.cpp  CPUTests_adc_r.cpp  CPUTests_add_a_imm8.cpp  CPUTests_add_a_r8.cpp  CPUTests_add_hl.cpp  CPUTests_add_hl_r16.cpp  CPUTests_add_hl_rr.cpp  CPUTests_add_n.cpp  CPUTests_add_r.cpp  CPUTests_add_sp_e.cpp  CPUTests_and_a_imm8.cpp  CPUTests_and_a_r8.cpp  CPUTests_and_hl.cpp  CPUTests_and_n.cpp  CPUTests_and_r.cpp  CPUTests_bit_b3_r8.cpp  CPUTests_bit_b_hl.cpp  CPUTests_bit_b_r.cpp  CPUTests_call_cc_nn.cpp  CPUTests_call_cond_imm16.cpp  CPUTests_call_imm16.cpp  CPUTests_call_nn.cpp  CPUTests_ccf.cpp  CPUTests_cp_a_imm8.cpp  CPUTests_cp_a_r8.cpp  CPUTests_cp_hl.cpp  CPUTests_cp_n.cpp  CPUTests_cp_r.cpp  CPUTests_cpl.cpp  CPUTests_daa.cpp  CPUTests_dec_hl.cpp  CPUTests_dec_r.cpp  CPUTests_dec_r16.cpp  CPUTests_dec_r8.cpp  CPUTests_dec_rr.cpp  CPUTests_di.cpp  (+110 more)
GBEmulatorTests/lib/Registers/: RegistersTests.cpp
GLEmulatorCore/: GLEmulatorCore.vcxproj  GLEmulatorCore.vcxproj.filters
GLEmulatorCore/include/: Cartridge.h  Common.h  Context.h  Emulator.h  Operations.h  Registers.h
GLEmulatorCore/lib/: Cartridge.cpp  Common.cpp  Context.cpp  Emulator.cpp  Operations.cpp  Registers.cpp
